--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  display: grid;
+  grid-template-columns: auto auto;
 }
 
 .App-logo {
@@ -35,4 +37,217 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.mtop_1 {
+  margin-top: 1rem;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  /* justify-content: center;
+  align-items: center; */
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 97.5%;
+  border-radius: 5px;
+  margin: auto;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+img {
+  border-radius: 5px 5px 0 0;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 2px 16px; */
+}
+
+.image_style {
+  width: 100%;
+  filter: brightness(50%);
+}
+
+.circle:before {
+  content: ' \25CF';
+  font-size: 8px;
+}
+
+.page_title_style {
+  font-size: 28px;
+  font-family: 'Open Sans', sans-serif;
+  padding-left: 0.5rem;
+  margin: 0px;
+  margin-top: 1rem;
+}
+
+.title_style {
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+  padding-left: 0.5rem;
+}
+
+.nearest_style {
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  padding-left: 0.5rem;
+}
+
+.famous_style {
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  padding-left: 0.5rem;
+}
+
+.match_style {
+  color: #50b396;
+  font-weight: 600;
+}
+
+.offer_style {
+  background-color: #ccf5e7;
+  padding: 0.8rem;
+  padding-left: 1rem!important;
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  padding-left: 0.5rem;
+}
+
+.margin_1 {
+  margin: 0.5rem;
+}
+
+.mleft_1 {
+  margin-left: 0.5rem;
+}
+
+.mright_1 {
+  margin-right: 0.5rem;
+}
+
+.original_price_style {
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+}
+
+.discount_style {
+  font-size: 12px;
+  font-family: 'Open Sans', sans-serif;
+  margin-left: 0.2rem;
+  background-color: #de412c;
+  color: #ffffff;
+  padding: 0.1rem;
+  margin-right: 1.5rem;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+/* .discount_style:before {
+  content:"";
+  position: absolute;
+  right: 100%;
+  top:0px;
+  width:0px;
+  height:0px;
+  border-top:20px solid transparent;
+  border-right:40px solid #de412c;
+  border-bottom:20px solid transparent;
+} */
+
+.final_price_style {
+  font-size: 32px;
+  font-family: 'Open Sans', sans-serif;
+  color: #de412c;
+  font-weight: 600;
+  margin: 0px;
+  margin-right: 1.5rem;
+}
+
+.fees_cycle_style {
+  margin: 0px;
+  margin-right: 1.5rem;
+  font-size: 12px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.right_div_style {
+  text-align: right;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.tag_style {
+  background: #ffffff;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  margin: 0px;
+  border-radius: 1rem;
+  margin-right: 0.5rem;
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.ranking_style {
+  color: #ffffff;
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  margin-right: 1.5rem;
+  font-weight: 600;
+}
+
+.rating_box {
+  background: #f5a731;
+  border-radius: 0.5rem;
+  color: #ffffff;
+  text-align: center;
+  padding: 0.3rem;
+}
+
+.rating_box p {
+  margin: 0;
+}
+
+.rate_num_style {
+  font-size: 28px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+
+.promoted_style {
+  background: #68a6fb;
+  color: #ffffff;
+  font-size: 18px;
+  font-family: 'Open Sans', sans-serif;
+  padding: 1rem;
+}
+
+.promoted_style::before {
+  content:"";
+  position: absolute;
+  right: 13%;
+  top: 19px;
+  border-top: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+  border-left: 20px solid #ffffff;
 }
